[gd_scene load_steps=7 format=3 uid="uid://cnurxmck8x2nv"]

[ext_resource type="Script" path="res://Inventory/inventory_ui.gd" id="1_f8nx2"]
[ext_resource type="PackedScene" uid="uid://c7t4h4vmmoc1q" path="res://Inventory/inventory_grid_container.tscn" id="2_6we01"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="2_pejsm"]
[ext_resource type="PackedScene" uid="uid://bs83kbxgwhjkf" path="res://Inventory/inventory_item_draggable.tscn" id="3_x1kes"]
[ext_resource type="AudioStream" uid="uid://cm6x5rm6ron4s" path="res://DownloadAssets/Inventory SFX Bundle/BagOpen4.mp3" id="4_ps8wt"]
[ext_resource type="AudioStream" uid="uid://dvdv1th2af6s7" path="res://DownloadAssets/Inventory SFX Bundle/BagClose3.mp3" id="5_7ih2f"]

[node name="InventoryUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_f8nx2")

[node name="InventoryCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Background" type="ColorRect" parent="InventoryCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -411.0
offset_top = -200.0
offset_right = 409.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.854902, 0.513726, 0.34902, 1)
metadata/_edit_use_anchors_ = true

[node name="ButtonGridContainer" type="GridContainer" parent="InventoryCanvas"]
offset_left = 749.0
offset_top = 466.0
offset_right = 955.0
offset_bottom = 506.0
columns = 3

[node name="RecipeBookButton" type="Button" parent="InventoryCanvas/ButtonGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../InventoryGridContainer")
focus_neighbor_right = NodePath("../CloseButton")
theme = ExtResource("2_pejsm")
text = "Recipe Book"
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="InventoryCanvas/ButtonGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../RecipeBookButton")
focus_neighbor_top = NodePath("../../InventoryGridContainer")
theme = ExtResource("2_pejsm")
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="InventoryGridContainer" parent="InventoryCanvas" instance=ExtResource("2_6we01")]
unique_name_in_owner = true
focus_mode = 2

[node name="InventoryItemDraggable" parent="InventoryCanvas" instance=ExtResource("3_x1kes")]
unique_name_in_owner = true
visible = false

[node name="InventoryOpenSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ps8wt")
volume_db = -15.0
pitch_scale = 1.5
bus = &"SFX"

[node name="InventoryClosedSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_7ih2f")
volume_db = -15.0
pitch_scale = 1.5
bus = &"SFX"

[connection signal="pressed" from="InventoryCanvas/ButtonGridContainer/RecipeBookButton" to="." method="_on_recipe_book_button_pressed"]
[connection signal="pressed" from="InventoryCanvas/ButtonGridContainer/CloseButton" to="." method="_on_close_button_pressed"]
